[package]
name = "tower-sessions-dynamodb-store"
version = "0.2.1"
edition = "2021"
description = "AWS DynamoDB session store. Not for direct use; see the `tower-sessions` crate for details."
authors = ["Kirk Peterson <necrobious@gmail.com>"]
license = "MIT"
homepage = "https://github.com/necrobious/tower-sessions-dynamodb-store"
keywords = ["session", "sessions", "cookie", "tower", "dynamodb"]
categories = ["asynchronous", "network-programming", "web-programming"]
repository = "https://github.com/necrobious/tower-sessions-dynamodb-store"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
async-trait = "0.1.85"
aws-config = "1.5.13"
aws-sdk-dynamodb = "1.59.0"
rmp-serde = { version = "1.3.0" }
serde = { version = "1.0.217", features = ["derive", "rc"] }
thiserror = "2.0.10"
time = { version = "0.3.37", features = ["serde"] }
tower-sessions = "0.14.0"
tracing = "0.1.41"

[dev-dependencies]
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full"] }
tower-sessions-core = { version = "0.14.0", features = ["deletion-task"] }
tower = { version = "0.5.2", features = ["timeout"] }
tokio-test = "0.4.4"
tower-cookies = "0.11.0"

[[example]]
name = "counter"
